2002-09-22  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
	* Makefile.postamble: install gsweb.make

	* GSWeb.framework/GSWDefaultAdaptor.m: added config.h

	* GSWeb.framework/Makefile.preamble.in: new file.
	* GSWeb.framework/Makefile.preamble: removed.
	* gsweb.make.in: new file.

	* configure.ac: new file.
	* config/pathxml.m4: new file.
	* gsweb.make.in: new file.
	* config.h.in: new file.

	* GSWeb.framework/GNUmakefile (GNUSTEP_LOCAL_ADDITIONAL_MAKEFILES):
	include gsweb.make

	* GSWeb.framework/GSWTemplateParserXML.h|.m: include libxml includes
	from libxml/ dir.

	* GSWeb.framework/*.m: replaced all occurrencies of stringWithout*: and
	remove*: with the new methods.


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@14509 72102866-910b-0410-8b05-ffd578937521

--- a/GSWeb.framework/Makefile.preamble.in
+++ b/GSWeb.framework/Makefile.preamble.in
@@ -34,7 +34,7 @@
 #
 
 # Additional flags to pass to the preprocessor
-ADDITIONAL_CPPFLAGS =  -lwrap 
+ADDITIONAL_CPPFLAGS = -I..
 
 # Additional flags to pass to the Objective-C compiler
 ifeq ($(GDL2), yes)
@@ -60,18 +60,13 @@ endif
 ADDITIONAL_CFLAGS =  -DUSE_BUILTIN
 
 # Additional include directories the compiler should search
-ADDITIONAL_INCLUDE_DIRS =  -I. -I$(GNUSTEP_SYSTEM_ROOT)/db -I../..
+ADDITIONAL_INCLUDE_DIRS =  -I. -I../.. @XML_CFLAGS@
 
 # Additional LDFLAGS to pass to the linker
 ifeq ($(debug), yes)
-	ADDITIONAL_LDFLAGS := $(ADDITIONAL_LDFLAGS) -lFoundationExt_d -lxml -lz
+	LIBRARIES_DEPENP_UPON += -lFoundationExt_d @AUX_LIBS@
 else
-	ADDITIONAL_LDFLAGS := $(ADDITIONAL_LDFLAGS) -lFoundationExt -lxml -lz
-endif
-
-ifeq ($(LIBWRAP), yes)
-	ADDITIONAL_OBJCFLAGS := $(ADDITIONAL_OBJCFLAGS) -DHAVE_LIBWRAP
-	ADDITIONAL_LDFLAGS := $(ADDITIONAL_LDFLAGS) -lwrap
+	LIBRARIES_DEPEND_UPON += -lFoundationExt @AUX_LIBS@
 endif
 
 # Additional library directories the linker should search
