2002-11-27   Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb/GSWApplication.m:
		o added \n in logs
		o added removeVolatileDomainForName: before setting it
		o remove rcsId
		o changed class creation to avoid libFoundationExt dependency
		o reduced compilation  warnings
	* GSWeb/GSWDisplayGroup.m:
		o fixed bug in -initWithKeyValueUnarchiver: for defaultStringMatchFormat
		o remove rcsId
	* GSWeb/GSWConditional.[hm]
		o added _value and _conditionValue (see doc)
		o documentation
		o remove rcsId
	* GSWeb/GSWConstants.[hm]
		o added conditionValue
	* config.mak
		o switched to gdl2
	* GSWeb/GSWDeployedBundle.h:
		o changed bundleWithPath: return path to avoid warning
	* GSWeb/GSWSessionStore.[hm]:
		o added containsSessionID: and allSessionIDs;
		o implemented +serverSessionStore
		o remove rcsId
	* GSWeb/GSWComponentDefinition.m:
		o logs
		o remove rcsId


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@15156 72102866-910b-0410-8b05-ffd578937521

--- a/GSWExtensions.framework/Makefile.preamble
+++ b/GSWExtensions.framework/Makefile.preamble
@@ -62,9 +62,9 @@ ADDITIONAL_INCLUDE_DIRS =  -I$(GNUSTEP_SYSTEM_ROOT)/db -I../.. -I../GSWeb.framew
 
 # Additional LDFLAGS to pass to the linker
 ifeq ($(debug), yes)
-	ADDITIONAL_LDFLAGS = -lFoundationExt_d -lGSWeb_d -lGSANTLR_d
+	ADDITIONAL_LDFLAGS = -lGSWeb_d -lGSANTLR_d
 else
-	ADDITIONAL_LDFLAGS = -lFoundationExt -lGSWeb -lGSANTLR 
+	ADDITIONAL_LDFLAGS = -lGSWeb -lGSANTLR 
 endif
 
 #-lgnustep-xraw
