--- a/gsweb.make.in
+++ b/gsweb.make.in
@@ -30,6 +30,7 @@ GSWEB_MINOR_VERSION = @MINOR_VERSION@
 GSWEB_SUBMINOR_VERSION = @SUBMINOR_VERSION@
 
 
+AUXILIARY_INCLUDE_DIRS += @AUX_INCS@
 AUXILIARY_INCLUDE_LIBS += @AUX_LIBS@
 
 
