Included gsweb.make in GSWExtensions and GSWExtensionsGSW frameworks.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@15194 72102866-910b-0410-8b05-ffd578937521

--- a/GSWExtensionsGSW.framework/GNUmakefile
+++ b/GSWExtensionsGSW.framework/GNUmakefile
@@ -111,6 +111,8 @@ GSWExtensionsGSW_AGSDOC_FLAGS = \
 
 -include GNUmakefile.local
 
+include ../gsweb.make
+
 include $(GNUSTEP_MAKEFILES)/framework.make
 ifeq ($(doc),yes)
 include $(GNUSTEP_MAKEFILES)/documentation.make
