--- a/GSWExtensions.framework/GNUmakefile
+++ b/GSWExtensions.framework/GNUmakefile
@@ -171,6 +171,8 @@ GSWExtensions_AGSDOC_FLAGS = \
 
 -include GNUmakefile.local
 
+include ../gsweb.make
+
 include $(GNUSTEP_MAKEFILES)/framework.make
 ifeq ($(doc),yes)
 include $(GNUSTEP_MAKEFILES)/documentation.make
