2002-12-06   Manuel Guesdon <mguesdon@orange-concept.com> 	* GSWExtensions.framework/Makefile.preamble: 		o added -I/usr/include/libxml2 in ADDITIONAL_INCLUDE_DIRS 	* GSWExtensionsGSW.framework/Makefile.preamble: 		o added -I/usr/include/libxml2 in ADDITIONAL_INCLUDE_DIRS 	* GSWeb/GSWeb.h: 		o removed #include <GSWeb/GSWTemplateParserXML.h> 	* GSWCheckBox.m: 		o logs 		o rewritten some part to match specifications 		o removed rcsId 		o documentation
	* GSWeb/GSWRadioButton.m:
		o logs
		o rewritten some part to match specifications
		o removed rcsId
		o documentation

	* GSWeb/GSWTemplateParser.m
		o added #include "GSWTemplateParserXML.h"
		o removed rcsId

	* GSWeb/GSWTemplateParserANTLR.m
		o added #include "GSWTemplateParserANTLR.h"
		o removed rcsId

	* GSWeb/GSWTemplateParserXML.m
		o added #include "GSWTemplateParserXML.h"
		o removed rcsId

	* GSWeb/GSWHTMLAttrParser.m
		o added #include "GSWHTMLAttrParser.h"
		o removed rcsId
	* GSWeb/GSWRepetition.m:
		o logs
	* Testing/DynamicElements/Makefile.preamble
		o removed -lFoundationExt
	* Examples/hello/Makefile.preamble
		o removed -lFoundationExt
	* GSWeb/GSWBundle.m:
		o logs
	* GSWeb/GSWInput.[hm]gswinput
		o added -valueInContext:context
		o removed rcsId
	* Testing/DynamicElements/CheckBox1Page.*
		o added
	*Testing/DynamicElements/CheckBox2Page.*
		o added
	* Testing/DynamicElements/RadioButton1Page.*
		o added
	* Testing/DynamicElements/RadioButton2Page.*
		o added
	* TODO:
		o updated


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@15261 72102866-910b-0410-8b05-ffd578937521

--- a/Testing/DynamicElements/GNUmakefile
+++ b/Testing/DynamicElements/GNUmakefile
@@ -56,7 +56,10 @@ Browser2Page.m \
 PopUpButton1Page.m \
 PopUpButton2Page.m \
 TextField1Page.m \
-
+CheckBox1Page.m \
+CheckBox2Page.m \
+RadioButton1Page.m \
+RadioButton2Page.m \
 
 DynamicElements_COMPONENTS = \
 Main.gswc \
@@ -69,6 +72,11 @@ Browser2Page.gswc \
 PopUpButton1Page.gswc \
 PopUpButton2Page.gswc \
 TextField1Page.gswc \
+CheckBox1Page.gswc \
+CheckBox2Page.gswc \
+RadioButton1Page.gswc \
+RadioButton2Page.gswc \
+
 
 SRCS = $(GSWAPP_NAME:=.m)
 
