--- a/Testing/DynamicElements/Makefile.preamble
+++ b/Testing/DynamicElements/Makefile.preamble
@@ -54,9 +54,9 @@ ADDITIONAL_INCLUDE_DIRS =  -I$(GNUSTEP_SYSTEM_ROOT)/db -I../..
 
 # Additional LDFLAGS to pass to the linker
 ifeq ($(debug), yes)
-	ADDITIONAL_LDFLAGS = -lFoundationExt_d -lGSWeb -lGSANTLR_d -lgnustep-db2_d -lgnustep-db2control_d
+	ADDITIONAL_LDFLAGS = -lGSWeb -lGSANTLR_d -lgnustep-db2_d -lgnustep-db2control_d
 else
-	ADDITIONAL_LDFLAGS = -lFoundationExt -lGSWeb -lGSANTLR -lgnustep-db2 -lgnustep-db2control
+	ADDITIONAL_LDFLAGS = -lGSWeb -lGSANTLR -lgnustep-db2 -lgnustep-db2control
 endif
 
 ifeq ($(LIBWRAP), yes)
