2003-05-14   Manuel Guesdon <mguesdon@orange-concept.com> 	* GSWeb.framework/GSWRequest.h/.m: 		o added ivar _browserAcceptedEncodings 		o added -browserAcceptedEncodings 		o modified browserLanguages to use quality indicator 	* GSWeb.framework/GSWConstants.h/.m: 		o added GSWHTTPHeader_AcceptEncoding 	* GSWeb.framework/GSWResponse.h/.m: 		o added ivar _acceptedEncodings 		o added -acceptedEncodings 		o added -setAcceptedEncodings: 	* GSWeb.framework/GSWComponentRequestHandler.m: 		o set request  browserAcceptedEncodings to response 	* GSWeb.framework/GSWComponent.m: 		o set request  browserAcceptedEncodings to response 	* GSWeb.framework/NSData+Compress.h/.m: 		o added 	* config.h.in 		o added HAVE_ZLIB
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@16718 72102866-910b-0410-8b05-ffd578937521

--- a/GSWeb.framework/GNUmakefile
+++ b/GSWeb.framework/GNUmakefile
@@ -187,6 +187,7 @@ GSWGeometricRegion.m \
 GSWFileUpload.m \
 GSWResourceURL.m \
 GSWProcFS.m \
+NSData+Compress.m \
 stacktrace.m \
 attach.m
 GSWeb_wo_OBJC_FILES = $(GSWeb_OBJC_FILES)
@@ -304,6 +305,7 @@ GSWGeometricRegion.h \
 GSWFileUpload.h \
 GSWResourceURL.h \
 GSWProcFS.h \
+NSData+Compress.h \
 GSWWOCompatibility.h
 
 
