* gsweb.make.in 	* Examples/hello/GNUmakefile 	* Examples/hello/Makefile.preamble 	* Testing/DynamicElements/GNUmakefile 	* Testing/DynamicElements/Makefile.preamble: Rely on 	Auxiliary/gdl2.make and Auxiliary/gsweb.make to set compiler and 	linker flags. 	* Examples/hello/config.mak: Removed.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@16852 72102866-910b-0410-8b05-ffd578937521

--- a/Examples/hello/Makefile.preamble
+++ b/Examples/hello/Makefile.preamble
@@ -1,3 +1,4 @@
+#   -*-makefile-*-
 #   Copyright (C) 1999 Free Software Foundation, Inc.
 #   
 #   Written by:	Manuel Guesdon <mguesdon@sbuilders.com>
@@ -42,22 +43,13 @@ ADDITIONAL_OBJCFLAGS =
 ADDITIONAL_CFLAGS =  
 
 # Additional flags to pass to the Objective-C compiler
-#new
-ifeq ($(GDL2), yes)
-        ADDITIONAL_OBJCFLAGS = -DUSE_BUILTIN -DGDL2
-else
-        ADDITIONAL_OBJCFLAGS = -DUSE_BUILTIN
-endif
+ADDITIONAL_OBJCFLAGS =
 
 # Additional include directories the compiler should search
-ADDITIONAL_INCLUDE_DIRS =  -I$(GNUSTEP_SYSTEM_ROOT)/db -I../..
+ADDITIONAL_INCLUDE_DIRS =
 
 # Additional LDFLAGS to pass to the linker
-ifeq ($(debug), yes)
-	ADDITIONAL_LDFLAGS = -lGSWeb -lGSANTLR_d -lgnustep-db2_d -lgnustep-db2control_d
-else
-	ADDITIONAL_LDFLAGS = -lGSWeb -lGSANTLR -lgnustep-db2 -lgnustep-db2control
-endif
+ADDITIONAL_LDFLAGS = 
 
 #-lgnustep-xraw
 
