o fix for debug/non debug libraries
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@18197 72102866-910b-0410-8b05-ffd578937521

--- a/GSWExtensions.framework/Makefile.preamble
+++ b/GSWExtensions.framework/Makefile.preamble
@@ -62,7 +62,12 @@ ADDITIONAL_CFLAGS =
 ADDITIONAL_INCLUDE_DIRS =  -I$(GNUSTEP_SYSTEM_ROOT)/db -I.. -I../.. -I../GSWeb.framework/derived_src
 
 # Additional LDFLAGS to pass to the linker
-ADDITIONAL_LDFLAGS = -lGSANTLR 
+ifeq ($(debug), yes)
+	ADDITIONAL_LDFLAGS := $(ADDITIONAL_LDFLAGS) -lGSANTLR_d
+else
+        ADDITIONAL_LDFLAGS := $(ADDITIONAL_LDFLAGS) -lGSANTLR 
+endif
+
 GSWExtensions_ADDITIONAL_LDFLAGS = GSWeb
 GSWExtensions_wo_ADDITIONAL_LDFLAGS = GSWeb_wo
 
