added GSWActionURL.h and GSWActionURL.m
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@18198 72102866-910b-0410-8b05-ffd578937521

--- a/GSWeb.framework/GNUmakefile
+++ b/GSWeb.framework/GNUmakefile
@@ -197,6 +197,7 @@ GSWLifebeatThread.m \
 GSWStaticResourceRequestHandler.m \
 GSWRecording.m \
 GSWInputStreamData.m \
+GSWActionURL.m \
 
 #For next Version:
 #GSWAdminAction.m \
@@ -331,6 +332,7 @@ GSWLifebeatThread.h \
 GSWStaticResourceRequestHandler.h \
 GSWRecording.h \
 GSWInputStreamData.h \
+GSWActionURL.h \
 
 #For next Version:
 #GSWAdminAction.h \
