* GSWExtensions.framework/Makefile.preamble: Correct         ADDITIONAL_INCLUDE_DIRS and ADDITIONAL_LIB_DIRS.         * Testing/DynamicElements/Makefile.preamble: Ditto.         * GSWExtensionsGSW.framework/Makefile.preamble: Ditto. Also         remove comments.         * GSWeb.framework/Makefile.preamble.in:  Ditto. Also correct         ADDITIONAL_CPPFLAGS
        * Testing/DynamicElements/GNUmakefile: Remove unused
	variables.
        * GSWeb.framework/GNUmakefile: Ditto.

        * GSWExtensions.framework/Makefile.postamble: Removed unused
        targets 'regenerate' and 'copy-dist'.
        * GSWExtensionsGSW.framework/Makefile.postamble: Ditto.
        * Testing/DynamicElements/Makefile.postamble: Ditto.
        * GSWeb.framework/Makefile.postamble: Ditto.  Add rule for
        GNUSTEP_TARGET_DIR dependent 'config.h'.

        * Testing/DynamicElements/Resources/Info-DynamicElements.plist:
        Correct spelling.

        * Testing/DynamicElements/DynamicElements.m: Replace #import
        with #include.
        * Testing/DynamicElements/DynamicElements_main.m: Ditto.
        * Testing/DynamicElements/Main.h: Ditto.
        * Testing/DynamicElements/Main.m: Ditto.
        * Examples/hello/Hello.m: Ditto.
        * Examples/hello/HelloPage.h: Ditto.
        * Examples/hello/HelloPage.m: Ditto.
        * Examples/hello/Hello_main.m: Ditto.
        * Examples/hello/Main.h: Ditto.
        * Examples/hello/Main.m: Ditto.
        * Examples/hello/Resources/Info-Hello.plist: Reformatted.

        * GSWeb.framework/GSWDebug.h/m (GSWLogAssertGoodFn): Adjust
        prototype to use id instead of NSObject * and dereference via
        class_pointer instead of isa.
        ([NSObject isa]): Remove obsolete category.

        * GSWeb.framework/GSWPageDefLexer.h: Use "GSWeb.h" instead of
        <GSWeb/GSWeb.h> for include.
        * GSWeb.framework/GSWPageDefLexer.m: Ditto.
        * GSWeb.framework/GSWPageDefParser.h: Ditto.
        * GSWeb.framework/GSWPageDefParser.m

--- a/GSWExtensions.framework/Makefile.preamble
+++ b/GSWExtensions.framework/Makefile.preamble
@@ -59,7 +59,9 @@ endif
 ADDITIONAL_CFLAGS =  
 
 # Additional include directories the compiler should search
-ADDITIONAL_INCLUDE_DIRS =  -I$(GNUSTEP_SYSTEM_ROOT)/db -I.. -I../.. -I../GSWeb.framework/derived_src
+ADDITIONAL_INCLUDE_DIRS = \
+	-I../GSWeb.framework/$(GNUSTEP_TARGET_DIR) \
+	-I../GSWeb.framework/derived_src
 
 # Additional LDFLAGS to pass to the linker
 ifeq ($(debug), yes)
@@ -74,7 +76,11 @@ GSWExtensions_wo_ADDITIONAL_LDFLAGS = GSWeb_wo
 #-lgnustep-xraw
 
 # Additional library directories the linker should search
-ADDITIONAL_LIB_DIRS = -L../src/$(GNUSTEP_OBJ_DIR) -L$(GNUSTEP_SYSTEM_ROOT)/lib -L../GSWeb.framework/$(GNUSTEP_OBJ_DIR)
+ADDITIONAL_LIB_DIRS = 
+GSWExtentions_ADDITIONAL_LIB_DIRS = \
+        -L../GSWeb.framework/$(GNUSTEP_OBJ_DIR)/GSWeb
+GSWExtentions_wo_ADDITIONAL_LIB_DIRS = \
+        -L../GSWeb.framework/$(GNUSTEP_OBJ_DIR)/GSWeb_wo
 
 #
 # Flags dealing with installing and uninstalling
