--- a/Testing/DynamicElements/Resources/Info-DynamicElements.plist
+++ b/Testing/DynamicElements/Resources/Info-DynamicElements.plist
@@ -88,7 +88,7 @@
                                                 },
                                                 {
                                                         label = "A Fish";
-                                                        value = "fisch";
+                                                        value = "fish";
                                                 },
                                                 {
                                                         label = "A table";
@@ -112,7 +112,7 @@
                                                 },
                                                 {
                                                         label = "A Fish";
-                                                        value = "fisch";
+                                                        value = "fish";
                                                 },
                                                 {
                                                         label = "A table";
@@ -136,7 +136,7 @@
                                                 },
                                                 {
                                                         label = "A Fish";
-                                                        value = "fisch";
+                                                        value = "fish";
                                                 },
                                                 {
                                                         label = "A table";
@@ -160,7 +160,7 @@
                                                 },
                                                 {
                                                         label = "A Fish";
-                                                        value = "fisch";
+                                                        value = "fish";
                                                 },
                                                 {
                                                         label = "A table";
