--- a/Testing/DynamicElements/Makefile.preamble
+++ b/Testing/DynamicElements/Makefile.preamble
@@ -46,7 +46,7 @@ ADDITIONAL_CFLAGS =
 ADDITIONAL_OBJCFLAGS = -DUSE_BUILTIN
 
 # Additional include directories the compiler should search
-ADDITIONAL_INCLUDE_DIRS =  -I../..
+ADDITIONAL_INCLUDE_DIRS =  
 
 # Additional LDFLAGS to pass to the linker
 ADDITIONAL_LDFLAGS = 
